# compareConstructs

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  pyproject.toml  things_to_check.txt
.github/workflows/: deploy.yml  test-and-deploy.yml
app/: Dockerfile  aifeedback.py  dynamic_import.py  evaluation.py  evaluation_tests.py  format.py  general_check.py  global_variable_check.py  local_variable_check.py  output_traceback.py  param_generator.py  preview.py  requirements.txt  structure.py  structure_check.py  utils.py  utils_test.py  variable_check.py
app/checks/: check_func.py  check_result.py  func_check.py  general_check.py  global_variable_check.py  local_variable_check.py  output_check.py  same_variable_content_check.py  structure_check.py
app/docs/: user.md
app/format/: variable_compare_format.py
docs/: console_output.md  dev.md  functions.md  future_improvements.md  parameters.md  security.md  syntax_and_style.md  user.md  variable_content.md
evaluation_function/: evaluation.py  evaluation_test.py  main.py  preview.py
evaluation_function/checks/: check_result.py  func_check.py  general_check.py  global_variable_check.py  output_check.py  run_checks.py  same_variable_content_check.py  structure_check.py  test.py
evaluation_function/format/: general_format.py  output_traceback_format.py  variable_compare_format.py
